gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-closure_lifetime_binder.rs
fn main() {
    for<> || -> () {};
// { dg-error ".E0658." "" { target *-*-* } .-1 }
    for<'a> || -> () {};
// { dg-error ".E0658." "" { target *-*-* } .-1 }
    for<'a, 'b> |_: &'a ()| -> () {};
// { dg-error ".E0658." "" { target *-*-* } .-1 }
}

